--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
     "express": "^5.1.0"
+  },
+  "scripts": {
+    "dataSub": "node dataSub.js",
+    "backend": "node backend.js",
+    "start": "npm run dataSub & npm run backend"
   }
 }
